2013-03-05  Jiyoun Park (Jypar)

        * Ecore_x: Fix dangling pointer problem related with shmget fail

2013-03-04  Sung W. Park (sung_)

        * Evas Evas_GL: removed resource surface/context pool in favor of
        creating on-demand. resource surface/contexts are used for creating
        GL resources for Evas_GL.
        

2013-02-28  Tom Hacohen (TAsn)

        * Evas textblock: Added proper size adjustments for
	"high" shaped texts.

2013-02-28  Mike Blumenkrantz

        * fix custom states for edje SPACER parts    
        * fix edje program filters

2013-02-28  Cedric Bail

	* eina_strlcat work with a NULL src.


2013-02-26  Carsten Haitzler (The Rasterman)

        * Fix evas GL common engine to have a shader to do oversampling on
        downscaling. This makes quality much better and "at best"
        equates to a 16 point sample (2x2 linear interpolation samples,
        where a linear interpolation sample equates to a 2x2 sample). This
        will have perfomance impact, but the quality is worth it and
        makes it closer to software downscaling in quality. It supports
        2x2, 2x1 and 1x2 oversampling. YUV not done, nor image mask
        (font shaders not needed).

2013-02-23  ChunEon Park (Hermet)

        * Evas cache: remove the freed worker from the pthread worker list when it's failed to create a new thread so as not to access it if a thread is working newly.

2013-02-21  Tom Hacohen (TAsn)

        * Evas text: Fixed bug with the text object direction detection.
        * Evas font: Fixed font run detection for specific cases with 2
        different fonts in the middle of a run.

2013-02-21  Carsten Haitzler (The Rasterman)

        * Add ecore_x_dnd_self_begin() and ecore_x_dnd_self_drop() to
        allow xdnd chatting to yourself (your source drag window).

2013-02-20  Carsten Haitzler (The Rasterman)

        * Fix ecore-x edid fetch to ftech 128, not 100 bytes.

2013-02-20  Cedric Bail
